@@ -11,6 +11,14 @@ project's main git repository: [[https://github.com/captainflasmr/ollama-buddy
 
 * Versions
 
+** <2025-03-03> *0.4.0*
+
+Added conversation history support and navigation functions
+
+- Implemented conversation history tracking between prompts and responses
+- Added configurable history length limits and visual indicators
+- Created navigation functions to move between prompts/responses in buffer
+
 ** <2025-03-02> *0.3.1*
 
 Enhanced model colour contrast with themes, allowing =ollama-buddy-enable-model-colors= to be enabled by default.
